# creative-llm

./: .gitattributes  .gitignore  README.md  host_model.sh  pyproject.toml
3d/: run_3d_benchmark.py
3d/config/: config_gpt4o.yaml  config_local.yaml
3d/modules/: llm_interface.py  record
3d/scripts/: add_system_to_alpaca.py  build_3d_finetune_dataset.py  convert_finetune_to_alpaca.py  fix_alpaca_json.py  plot_3d_rates_compare.py
bench/boolean/: boolean_benchmark.py  gen_data.sh  run_bench.sh
bench/boolean/checkpoints/: checkpoint_OpenAI_tinyllama__20251029_000013.json
bench/boolean/config/: config_tinyllama.yaml
bench/boolean/datasets/: boolean_2var.json
bench/boolean/modules/: llm_interface.py
bench/boolean/results/: boolean_2var_tinyllama.json
boolean/: dataset.json  improved_prompt_template.txt  visualize_results.ipynb
boolean/grpo_tinyllama_boolean1/: README.md
boolean/results/: tinyllama.json  tinyllama_improved.json  tinyllama_prompt_engineered.json
causal/: causal_datasets_L.json  causal_finetunedataset.jsonl  generate_finetune_dataset_v4.py  pic.py  run_causal_benchmark.py  run_causal_benchmark_imporved.py
causal/config/: config_ds.yaml  config_qw.yaml  config_qw_finetuned.yaml
causal/modules/: llm_interface.py
causal/results/: datasets_s_finetuned_qwen.json  datasets_s_qwen3-14b.json  datasets_s_qwen3-14bwith_better_prompt.json
