[project]
name = "creative-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "openai>=2.6.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "trl[vllm]>=0.24.0",
]
